--- a/client/src/components/auth/Login.css
+++ b/client/src/components/auth/Login.css
@@ -1,3 +1,5 @@
 body {
-  background-image: "img/BarnsLink.png" ;
+  background-image: url("/Users/christopher/Documents/Senior-Project/client/src/img/BarnsLink.png");
+  background-repeat: no-repeat;
+  background-position:bottom;
 }
