--- a/client/src/components/dashboard/customer/MenuStyles.css
+++ b/client/src/components/dashboard/customer/MenuStyles.css
@@ -1,7 +1,7 @@
 
 :root {
-	--primary: #ccb94d;
-	--secondary: #a9c46a;
+	--primary: #4db3cc;
+	--secondary: #6ac4b8;
 	--light: #f2f3ef;
 }
 html {
@@ -44,6 +44,7 @@ input {
 	max-width: 50rem;
 	background-color: var(--light);
 	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+	font-size: 2rem;
 }
 
 @media (min-width: 660px) {
@@ -51,6 +52,7 @@ input {
 		display: grid;
 		grid-gap: 4rem;
 		grid-template-columns: 1fr 1fr;
+		
 	}
 }
 
@@ -60,6 +62,7 @@ input {
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 1.5rem;
+	font-size: 1rem;
 }
 
 .logo {
@@ -87,7 +90,7 @@ input {
 .mains-description {
 	flex: 1 1 100%;
 	margin: 0.75rem 0 0;
-	color: var(--secondary);
+	color: var(--primary);
 }
 
 .aside {
@@ -95,7 +98,7 @@ input {
 }
 
 .extras {
-	color: var(--secondary);
+	color: var(--primary);
 }
 
 .extras + .extras {
@@ -110,15 +113,18 @@ input {
 
 .extras .menu-item {
 	margin-bottom: 0.75rem;
+	font-size: 1rem;
 }
 
 .extras-heading {
 	margin: 0 0 1.5rem;
-	border-bottom: 1px solid var(--secondary);
+	border-bottom: 1px solid var(--primary);
+	font-size: 2rem;
 }
 
 .extras-name {
 	flex-grow: 1;
+	font-size: 1rem;
 }
 
 .total {
