--- a/client/src/components/dashboard/customer/MenuStyles.css
+++ b/client/src/components/dashboard/customer/MenuStyles.css
@@ -22,7 +22,7 @@ html {
 body {
 	color: var(--primary);
 	background-color: var(--primary);
-	padding: 1rem;
+	
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
 		Apple Color Emoji, Segoe UI Emoji;
 }
@@ -65,17 +65,10 @@ input {
 	font-size: 1rem;
 }
 
-.logo {
-	width: 280px;
-	margin: 0 auto 2rem;
-	display: block;
-	grid-column: 1 / 3;
-}
+
 
 @media (min-width: 660px) {
-	.logo {
-		margin-bottom: 0;
-	}
+	
 }
 
 .mains {
@@ -136,7 +129,7 @@ input {
 	align-items: flex-end;
 	position: sticky;
 	bottom: 0;
-	color: var(--secondary);
+	color: var(--primary);
 	background-color: var(--light);
 	border-top: 1px solid var(--secondary);
 	box-shadow: 0 -0.5rem 0.75rem 0.5rem var(--light);
