--- a/client/src/components/dashboard/customer/MenuStyles.css
+++ b/client/src/components/dashboard/customer/MenuStyles.css
@@ -1,8 +1,8 @@
 
 :root {
-	--primary: #18505e;
+	--primary: #4084a3;
 	--secondary: #6ac4b8;
-	--light: #f2f3ef;
+	--light: #f9faf8;
 }
 html {
 	box-sizing: border-box;
