--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  outline: 0;
+  box-sizing: border-box;
+
+  -webkit-font-smoothing: antialiased;
 }
 
-.home,
-.reports,
-.products,
-.team,
-.reports {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
+html, body, #root {
+  height: 100%;
+  min-height: 100%;
+}
+
+*, input, button, textarea {
+  border: 0;
+  outline: 0;
+
+  font-family: 'Roboto', sans-serif;
+}
+
+:root {
+  --primary: #FFF;
+  --secondary: #000;
 }
