--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -1,5 +1,12 @@
-body {
-    background-image: url("/Users/christopher/Documents/Senior-Project/client/src/img/BarnsLink.png");
-    background-repeat: no-repeat;
-    background-position:bottom;
-  }
+.layout {
+  display: grid;
+
+  grid-template-columns: auto;
+  grid-template-rows: 12vh 76vh 12vh;
+
+  grid-template-areas: 
+    'navigationMenu'
+    'mainContent'
+    'footer'
+  ;
+}
