--- a/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
+++ b/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
@@ -92,6 +92,27 @@
     margin-left: 0px;
     cursor: pointer;
   }
+  .admin-view-menu-content button {
+    width: 10%;
+    height: 35px;
+    margin-top: 30px;
+  
+    border: 1px solid #000;
+    border-radius: 8px;
+    border-color: #000;
+    
+    font-weight: 700;
+    font-size: 12px;
+    color: #000;
+  
+    text-align: center;
+    text-decoration: none;
+    background: #FFF;
+  
+    cursor: pointer;
+  
+    transition: filter 0.2s;
+  }
   
   .admin-view-menu-content ul li button:hover {
     opacity: 0.8;
