--- a/client/src/components/dashboard/customer/Contact/Contact.css
+++ b/client/src/components/dashboard/customer/Contact/Contact.css
@@ -1,76 +1,132 @@
-.customer-contact-container {
-    display: flex;
-    min-height: 88vh;
-  
-    grid-area: main;
-    
-    justify-content: center;
-  
-    overflow: auto;
-  
-    background: #E4F0FB;
-  }
-  
-  .customer-contact-content {
-    height: auto;
-    width: 95%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  
-    align-items: center;
-    justify-items: center;
-  
-    padding: 30px;
-  
-    border-radius: 8px;
-  
-    background: #ffffff;
-  
-  }
-  .customer-contact-content h2 {
-    font-size: 22px;
-    margin-left: 95px;
-    margin-bottom: 1px
-    
-  }
-  .customer-contact-content form {
-    padding: 75px 50px;
-    margin-left: 35px;
-    max-width: 500px;
-    font-size: 21px;
-    margin-top: 25px;
-    margin-right: 30px;
-  } 
+.body { font-family: 'Poppins', sans-serif; }
+.contact-page-section{
+position: relative;
+padding: 100px 0 50px;
+}
 
-  
-  .customer-contact-content .inputbox {
-    width: 100%;
-    border: 1px solid #000;
-    padding: 10px;
-    outline: none;
-    font-size: 14px;
-    font-weight: 300;
-    border-radius: 20px;
-  }
+.contact-page-section .column{
+position: relative;
+margin-bottom: 50px;
+}
+.contact-page-section h2{
+font-size: 24px;
+align-content: center;
+margin-left: 568px;
+}  
+.contact-page-section .contact-form{
+padding-right: 0;
+margin: 0;
+}
+.contact-page-section .contact-form .form-group input[type=submit],
+.contact-page-section .contact-form .form-group button{
+margin-top: 20px;
+}
+.contact-page-section .text{
+position: relative;
+font-size: 14px;
+line-height: 28px;
+color: #242222;
+margin-bottom: 30px;
+}
+.ul.contact-info { list-style: none; margin: 0; padding: 0;}
+.contact-page-section .contact-info{
+position: relative;
+margin-bottom: 50px;
+}
+.contact-page-section .contact-info li{
+position: relative;
+padding-left: 70px;
+font-size: 14px;
+line-height: 24px;
+color: #777777;
+font-weight: 400;
+margin-bottom: 45px;
+}
 
-  .customer-contact-content form button {
-    width: 30%;
-    height: 35px;
-    margin-top: 60px;
-  
-    border: 1px solid #000;
-    border-radius: 4px;
-    border-color: #000;
-    
-    font-weight: 700;
-    font-size: 12px;
-    color: #000;
-  
-    text-align: center;
-    text-decoration: none;
-    background: #FFF;
-  
-    cursor: pointer;
-  
-    transition: filter 0.2s;
-  }
+.contact-page-section .contact-info li strong{
+display: block;
+font-size: 18px;
+line-height: 26px;
+color: #002121;
+font-weight: 700;
+margin-bottom: 5px;
+}
+.contact-page-section .contact-info li a{
+color: #777777;
+display: inline-block;
+-webkit-transition: all 300ms ease;
+-moz-transition: all 300ms ease;
+-ms-transition: all 300ms ease;
+-o-transition: all 300ms ease;
+transition: all 300ms ease;
+}
+.contact-page-section .contact-info li a:hover{
+color: #1a1817;
+}
+.social-icon-three{
+position: relative;
+display: block;
+}
+.social-icon-three .title{
+position: relative;
+display: block;
+font-size: 18px;
+line-height: 26px;
+color: #002121;
+font-weight: 700;
+font-family: "Archivo", sans-serif;
+margin-bottom: 20px;
+}
+.social-icon-three li{
+position: relative;
+display: inline-block;
+font-size: 16px;
+line-height: 24px;
+color: #002121;
+margin-right: 22px;
+}
+.social-icon-three li:last-child{
+margin-right: 0;
+}
+.social-icon-three li a{
+position: relative;
+display: block;
+font-size: 16px;
+line-height: 24px;
+color: #002121;
+-webkit-transition: all 300ms ease;
+-moz-transition: all 300ms ease;
+-ms-transition: all 300ms ease;
+-o-transition: all 300ms ease;
+transition: all 300ms ease;
+}
+.social-icon-two li a:hover{
+color: #ff7e00;
+}
+    .contact-form .form-group input[type="text"], .contact-form .form-group input[type="email"], .contact-form .form-group input[type="tel"], .contact-form .form-group input[type="url"], .contact-form .form-group textarea, .contact-form .form-group select {
+position: relative;
+display: block;
+width: 100%;
+font-size: 14px;
+line-height: 28px;
+color: #bbbbbb;
+font-weight: 400;
+height: 60px;
+padding: 15px 30px;
+background-color: transparent;
+border: 1px solid #dddddd;
+border-radius: 30px;
+-webkit-transition: all 300ms ease;
+-moz-transition: all 300ms ease;
+-ms-transition: all 300ms ease;
+-o-transition: all 300ms ease;
+transition: all 300ms ease;
+}
+    .contact-form .form-group textarea {
+height: 200px;
+border-radius: 15px;
+resize: none;
+}
+    .contact-form .form-group input:focus, .contact-form .form-group select:focus, .contact-form .form-group textarea:focus {
+border-color: #ff9f14; outline: none;
+}
