--- a/client/src/components/dashboard/customer/menus/MenuStyles.css
+++ b/client/src/components/dashboard/customer/menus/MenuStyles.css
@@ -22,11 +22,12 @@ input {
 	width: 1.75rem;
 	height: 1.75rem;
 	padding: 0.25rem;
-	margin: 0 0.75rem;
+	margin: 0 3rem;
 	background-color: transparent;
-	border: 1px solid var(--secondary);
+	border: 1px solid var(#eaeff0);
 	border-radius: 50%;
-	text-align: center;
+	text-align: right;
+	
 }
 
 .menu {
