--- a/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
+++ b/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
@@ -57,7 +57,7 @@
     margin-top: 90px;
     margin-left: 25%;
     align-items: center;
-    justify-items: center;
+    justify-items: left;
   }
   
   .users-icon{
