--- a/client/src/components/dashboard/customer/Dashboards.css
+++ b/client/src/components/dashboard/customer/Dashboards.css
@@ -12,7 +12,7 @@
 }
 
 .home-page-body img {
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
@@ -21,19 +21,19 @@
     display: flex;
     flex-direction: row;
     position: relative;
-  
     align-items: center;
     justify-content: center;
+    background-color: white;
   }
   
   .navigation-menu .left-links {
     position: absolute;
-    left: 250px;
+    left: 200px;
   }
   
   .navigation-menu .right-links {
     position: absolute;
-    right: 250px;
+    right: 200px;
   }
   
   .navigation-menu .logged-right-links {
@@ -42,8 +42,9 @@
   }
   
   .navigation-menu img {
-    height: 125px;
-    width: 250px;
+    height: 80px;
+    width: 100px;
+    
   }
   
   .navigation-menu a {
