--- a/client/src/components/dashboard/customer/Contact/Contact.css
+++ b/client/src/components/dashboard/customer/Contact/Contact.css
@@ -11,7 +11,7 @@ margin-bottom: 50px;
 .contact-page-section h2{
 font-size: 24px;
 align-content: center;
-margin-left: 568px;
+margin-left: 28px;
 }  
 .contact-page-section .contact-form{
 padding-right: 0;
@@ -42,7 +42,14 @@ color: #777777;
 font-weight: 400;
 margin-bottom: 45px;
 }
-
+.contact-page-section .contact-info li .icon{
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 36px;
+    line-height: 1.4em;
+    color: #bbbbbb;
+  }
 .contact-page-section .contact-info li strong{
 display: block;
 font-size: 18px;
@@ -77,32 +84,7 @@ font-weight: 700;
 font-family: "Archivo", sans-serif;
 margin-bottom: 20px;
 }
-.social-icon-three li{
-position: relative;
-display: inline-block;
-font-size: 16px;
-line-height: 24px;
-color: #002121;
-margin-right: 22px;
-}
-.social-icon-three li:last-child{
-margin-right: 0;
-}
-.social-icon-three li a{
-position: relative;
-display: block;
-font-size: 16px;
-line-height: 24px;
-color: #002121;
--webkit-transition: all 300ms ease;
--moz-transition: all 300ms ease;
--ms-transition: all 300ms ease;
--o-transition: all 300ms ease;
-transition: all 300ms ease;
-}
-.social-icon-two li a:hover{
-color: #ff7e00;
-}
+
     .contact-form .form-group input[type="text"], .contact-form .form-group input[type="email"], .contact-form .form-group input[type="tel"], .contact-form .form-group input[type="url"], .contact-form .form-group textarea, .contact-form .form-group select {
 position: relative;
 display: block;
