--- a/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
+++ b/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
@@ -1,20 +1,20 @@
 .admin-home-main-container {
     display: flex;
-    height: 100%;
+    height: 98%;
     width: 100%;
     justify-content: center;
     align-items: center;
   
     overflow: auto;
   
-    background: #81a6c9;
+    background: #0a2e4e;
   }
   
   .admin-home-main-content {
-    height: 92vh;
+    height: 90vh;
     width: 95%;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     align-items: center;
     justify-items: center;
     padding: 30px;
@@ -45,7 +45,7 @@
     display: grid;
     justify-content: center;
     grid-template-columns: 140px 140px;
-    grid-template-rows: repeat(8,50px);
+    grid-template-rows: repeat(9,50px);
     grid-template-areas: 
     'usersLogo usersText'
     'menuLogo menuText'
