--- a/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
+++ b/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
@@ -62,7 +62,7 @@
   }
   
   .admin-view-menu-content ul li {
-    background: #CDE3F5;
+    background: #d0deeb;
     padding: 24px;
     border-radius: 8px;
     display: list-item;
@@ -87,21 +87,21 @@
   
 
   .admin-view-menu-content button {
-    width: 10%;
+    width: 15vh;
     height: 35px;
-    margin-top: 30px;
+   
   
-    border: 1px solid #000;
+    
     border-radius: 8px;
     border-color: #000;
     
     font-weight: 700;
-    font-size: 12px;
+    font-size: 11px;
     color: #000;
   
-    text-align: center;
+    text-align: left;
     text-decoration: none;
-    background: #FFF;
+    background: #d0deeb;
   
     cursor: pointer;
   
