--- a/client/src/components/dashboard/Manager/ManagerTask/Task.css
+++ b/client/src/components/dashboard/Manager/ManagerTask/Task.css
@@ -23,6 +23,8 @@
   }
   
   .title1 {
+    font-weight: bold;
+     font-style: italic;
     align-self: flex-start;
     font-size: 2rem;
     font-weight: 300;
