--- a/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
+++ b/client/src/components/dashboard/Manager/ManagerDashboard/ManagerDashboard.css
@@ -1,13 +1,13 @@
 .admin-home-main-container {
     display: flex;
-    height: 100%;
+    height: 80%;
     width: 100%;
     justify-content: center;
     align-items: center;
   
     overflow: auto;
   
-    background: #81a6c9;
+    background: #f0ebec;
   }
   
   .admin-home-main-content {
@@ -19,11 +19,26 @@
     justify-items: center;
     padding: 30px;
   
+  
+  
     border-radius: 8px;
   
     background: #ffffff;
   
   }
+
+  .admin-home-main-content-welcome-text
+{
+  background-color: #f0ebec;
+  margin-bottom: -60px;
+  border: 3px solid black;
+  padding: 10px;
+  margin-left: -30px;
+  margin-right: -30px;
+  height: -20px;
+  margin-top: -30px;
+  border-right: -30px;
+}
   
   .admin-home-main-content a {
     font-size: 18px;
@@ -42,6 +57,7 @@
   .links {
     height: 30%;
     width: 50%;
+    color: #aaaaaa;
     display: grid;
     justify-content: center;
     grid-template-columns: 140px 140px;
@@ -100,7 +116,7 @@
   }
   
   .admin-home-main-content .strong-link:active {
-    background: #7AC3FF;
+    background: black;
   }
   
   .admin-home-main-content svg {
