--- a/client/src/components/dashboard/Manager/ViewBooking/ManagerBooking.css
+++ b/client/src/components/dashboard/Manager/ViewBooking/ManagerBooking.css
@@ -1,4 +1,21 @@
+@font-face {
+ font-family: Montserrat;
+  src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
+}
 
+@media screen and (max-width: 960px) {
+  .admin-view-bookings-content > ul {
+    font-size: 70px;
+    margin-top: -150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .admin-view-bookings-content ul> li {
+    font-size: 50px;
+    margin-top: -100px;
+  }
+}
 
 .admin-view-bookings-container {
   display: flex;
@@ -10,7 +27,7 @@
 
   overflow: auto;
 
-  background: #E4F0FB;
+  background: #f0ebec;
 }
 
 .admin-view-bookings-content {
@@ -18,6 +35,8 @@
   width: 95%;
   margin-top: 30px;
   margin-bottom: 30px;
+  flex-direction: column;
+  flex-flow: column;
 
   align-items: center;
   justify-items: center;
@@ -26,13 +45,41 @@
 
   border-radius: 8px;
 
-  background: #ffffff;
+  background: #f0ebec;
 
 }
 
+.admin-view-bookings-content h2
+{
+  border: 1px solid black;
+  font-weight: bold;
+  font-style: italic;
+  display: inline-flex;
+  padding: 15px;
+  width: 100%;
+  background: #aaaaaa;
+  justify-content: center;
+  justify-items: left;
+  
+ 
+}
+
+.new-form-button
+{
+  color: red;
+  display: flex;
+  justify-items: left;
+
+}
+
+
 .admin-view-bookings-content h3 {
+  font-family: Montserrat;
+  font-style: italic;
   font-size: 38px;
   margin-bottom: 40px;
+  display: flex;
+  justify-content: left;
 }
 
 .admin-view-bookings-content a {
@@ -58,16 +105,22 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 25px;
   list-style:none;
+  flex-direction: column;
+  flex-flow: column;
   margin-bottom: 25px;
   align-items: center;
 }
 
+
 .admin-view-bookings-content ul li {
-  background: #CDE3F5;
+  border: 3px solid black;
+  background: #ffffff;
   padding: 24px;
   border-radius: 8px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  flex-direction: column;
+  flex-flow: column;
   align-items: center;
   justify-items: start;
   transition: opacity 0.4s;
