--- a/client/src/components/dashboard/customer/menus/MenuStyles.css
+++ b/client/src/components/dashboard/customer/menus/MenuStyles.css
@@ -38,7 +38,7 @@ input {
 	max-width: 50rem;
 	background-color: #eaeff0;
 	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-	font-size: 2rem;
+	font-size: 1rem;
 
 }
 
@@ -77,7 +77,9 @@ input {
 .mains-name {
 	margin: 0;
 	flex-grow: 1;
+	font-size: 1rem;
 	color: rgb(25, 53, 65);
+	font-weight: bold;
 	
 }
 
@@ -85,11 +87,13 @@ input {
 	flex: 1 1 100%;
 	margin: 0.75rem 0 0;
 	color:  rgb(25, 53, 65);
+	font-style: italic;
 }
 .mains-heading {
 	margin: 0 0 1.5rem;
 	border-bottom: 1px solid black;
-	font-size: 2rem;
+	font-size: 1rem;
+	text-align: left;
 	color:  rgb(25, 53, 65);
 }
 
