--- a/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
+++ b/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
@@ -1,10 +1,30 @@
+@font-face {
+  font-family: Montserrat;
+   src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
+ }
+@media screen and (max-width: 960px) {
+  .admin-view-menu-content > ul {
+    font-size: 70px;
+    margin-top: -150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .admin-view-menu-content ul> li {
+    font-size: 50px;
+    margin-top: -100px;
+  }
+}
+
+
 .admin-view-menu-container {
     display: flex;
   
 
+    grid-area: main;
     
     justify-content: center;
-  
+    align-items: center;
     overflow: auto;
   
     background: #E4F0FB;
@@ -12,26 +32,43 @@
   
   .admin-view-menu-content {
     height: auto;
-    width: 95%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  
-    align-items: center;
-    justify-items: center;
-  
-    padding: 30px;
-  
-    border-radius: 8px;
-    
-    background: #ffffff;
+  width: 95%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  flex-direction: column;
+  flex-flow: column;
+
+  align-items: center;
+  justify-items: center;
+
+  padding: 30px;
+
+  border-radius: 8px;
+
+  background: #f0ebec;
   
   }
   
   .admin-view-menu-content h2 {
+    border: 1px solid black;
+    font-weight: bold;
+    font-style: italic;
+    display: inline-flex;
+    padding: 15px;
+    width: 100%;
+    background: #aaaaaa;
+    justify-content: center;
+    justify-items: left;
+    
+  }
+  .admin-view-menu-content h3 {
+    font-family: Montserrat;
+    font-style: italic;
     font-size: 38px;
     margin-bottom: 40px;
+    display: flex;
+    justify-content: left;
   }
-  
   .admin-view-menu-content a {
     text-decoration: none;
     color: #000;
@@ -53,19 +90,24 @@
     
     margin-top: 25px;
     display: grid;
-    grid-template-columns:repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 25px;
-    list-style: none;
+    list-style:none;
+    flex-direction: column;
+    flex-flow: column;
     margin-bottom: 25px;
     align-items: center;
   }
   
   .admin-view-menu-content ul li {
-    background: #d0deeb;
+    border: 3px solid black;
+    background: #ffffff;
     padding: 24px;
     border-radius: 8px;
-    display: list-item;
-   
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    flex-direction: column;
+    flex-flow: column;
     align-items: center;
     justify-items: start;
     transition: opacity 0.4s;
