--- a/client/src/components/dashboard/Manager/ViewOrder/ManagerOrder.css
+++ b/client/src/components/dashboard/Manager/ViewOrder/ManagerOrder.css
@@ -1,100 +1,111 @@
-.admin-view-order-container {
+
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 100%;
+  }
+  
+  .card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
+.container {
+	padding: 2px 16px;
+}
+
+.view__orders {
     display: flex;
-  
-    grid-area: main;
-    
-    justify-content: center;
-    align-items: center;
-  
-    overflow: auto;
-  
-    background: #E4F0FB;
-  }
-  
-  .admin-view-order-content {
-    height: auto;
-    width: 95%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  
-    align-items: center;
-    justify-items: center;
-  
-    padding: 30px;
-  
-    border-radius: 8px;
-  
-    background: #ffffff;
-  
-  }
-  
-  .admin-view-order-content h1 {
-    font-size: 38px;
-    margin-bottom: 40px;
-  }
-  
-  .admin-view-order-content a {
-    text-decoration: none;
-    color: #000;
-    font-size: 24px;
-    font-weight: 500;
-    transition: opacity 0.2s;
-  }
-  
-  .admin-view-order-content a:hover {
-    opacity: 0.5;
-  }
-  
-  .admin-view-order-content svg {
-    margin-right: 10px;
-  }
-  
-  
-  .admin-view-order-content ul {
-    margin-top: 25px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-area: auto;
-    grid-gap: 25px;
-    list-style: none;
-    margin-bottom: 25px;
-    align-items: center;
-  }
-  
-  .admin-view-order-content ul li {
-    background: #CDE3F5;
-    padding: 24px;
-    border-radius: 8px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-items: start;
-    transition: opacity 0.4s;
-  }
-  
-  .admin-view-order-content ul li:hover {
-    opacity: 0.7;
-  }
-  
-  .admin-view-order-content ul li strong {
-    font-size: 16px;
-    margin: 7px;
-  }
-  
-  .admin-view-order-content ul li p {
-    font-size: 17px;
-  }
-  
-  .admin-view-order-content ul li button {
-    position: flex;
-    background: transparent;
-    max-width: 2px;
-    border: 0;
-    margin-top: 10px;
-    margin-left: 0px;
-    cursor: pointer;
-  }
-  
-  .admin-view-order-content ul li button:hover {
-    opacity: 0.8;
-  }
+    flex-wrap: wrap; 
+}
+
+.item__name {
+	margin-left: 10px;
+	padding: 0px;
+}
+
+.recomendedVideo_video {
+    display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+}
+
+.back__button {
+	float: right;
+	padding-top: 10px;
+}
+
+.order_table  {
+	padding: 5px;
+}
+
+.order_table th {
+ background-color: lightseagreen;
+}
+
+.order_table tr:hover {
+	background-color: #ddd;
+	opacity:0.5;
+	opacity:1;
+	transform-style: preserve-3d;
+	border-radius: 20px;
+}
+
+.mains-heading {
+	text-align: center;
+	font-weight: 900;
+	font-size: 50px;
+}
+
+.create_order_link  {
+	padding-top : 10px;
+}
+.create_order_link:hover {
+	border-radius: 10px;
+	transform: skew(-10deg);
+	transform-style: preserve-3d;
+    font-size: 20px;
+}
+
+.card_items {
+	padding: 10px;
+	display: flex;
+	border-bottom: 1px solid grey;
+}
+.card_items p {
+	right: 16px;
+}
+
+.card_items b {
+	font-weight: 900;
+	font-size: 15px;
+	margin-right: 20px;
+	margin-left: 10px;
+}
+
+.card_items:hover {
+	cursor: pointer;
+	transform: skew(-10deg);
+	transform-style: preserve-3d;
+}
+
+.card_items_subtotal {
+	display: flex;
+	margin-top: 10px;
+}
+
+.card_items_subtotal b {
+	font-size: 18px;
+	padding: 5px;
+	margin-left: 30px;
+}
+
+.card_items_subtotal p {
+	font-size: 15px;
+	padding: 5px;
+	margin-left: 5px;
+}
+
+.order_container {
+	padding: 35px;
+} 
