minimized files, removing unused dependancies/code

--- a/client/src/components/auth/Login.css
+++ b/client/src/components/auth/Login.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/Users/christopher/Documents/Senior-Project/client/src/img/BarnsLink.png");
-  background-repeat: no-repeat;
-  background-position:bottom;
+	background-image: url('/Users/christopher/Documents/Senior-Project/client/src/img/BarnsLink.png');
+	background-repeat: no-repeat;
+	background-position: bottom;
 }
