--- a/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
+++ b/client/src/components/dashboard/Manager/ViewMenu/ManagerMenu.css
@@ -1,154 +1,145 @@
 @font-face {
-  font-family: Montserrat;
-   src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
- }
+	font-family: Montserrat;
+	src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
+}
 @media screen and (max-width: 960px) {
-  .admin-view-menu-content > ul {
-    font-size: 70px;
-    margin-top: -150px;
-  }
+	.admin-view-menu-content > ul {
+		font-size: 70px;
+		margin-top: -150px;
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .admin-view-menu-content ul> li {
-    font-size: 50px;
-    margin-top: -100px;
-  }
+	.admin-view-menu-content ul > li {
+		font-size: 50px;
+		margin-top: -100px;
+	}
 }
 
-
 .admin-view-menu-container {
-    display: flex;
-  
+	display: flex;
 
-    grid-area: main;
-    
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
-  
-    background: #E4F0FB;
-  }
-  
-  .admin-view-menu-content {
-    height: auto;
-  width: 95%;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  flex-direction: column;
-  flex-flow: column;
+	grid-area: main;
 
-  align-items: center;
-  justify-items: center;
+	justify-content: center;
+	align-items: center;
+	overflow: auto;
 
-  padding: 30px;
+	background: #e4f0fb;
+}
 
-  border-radius: 8px;
+.admin-view-menu-content {
+	height: auto;
+	width: 95%;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	flex-direction: column;
+	flex-flow: column;
 
-  background: #f0ebec;
-  
-  }
-  
-  .admin-view-menu-content h2 {
-    border: 1px solid black;
-    font-weight: bold;
-    font-style: italic;
-    display: inline-flex;
-    padding: 15px;
-    width: 100%;
-    background: #aaaaaa;
-    justify-content: center;
-    justify-items: left;
-    
-  }
-  .admin-view-menu-content h3 {
-    font-family: Montserrat;
-    font-style: italic;
-    font-size: 38px;
-    margin-bottom: 40px;
-    display: flex;
-    justify-content: left;
-  }
-  .admin-view-menu-content a {
-    text-decoration: none;
-    color: #000;
-    font-size: 24px;
-    font-weight: 500;
-    transition: opacity 0.2s;
-  }
-  
-  .admin-view-menu-content a:hover {
-    opacity: 0.5;
-  }
-  
-  .admin-view-menu-content svg {
-    margin-right: 10px;
-  }
-  
-  
-  .admin-view-menu-content ul {
-    
-    margin-top: 25px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 25px;
-    list-style:none;
-    flex-direction: column;
-    flex-flow: column;
-    margin-bottom: 25px;
-    align-items: center;
-  }
-  
-  .admin-view-menu-content ul li {
-    border: 3px solid black;
-    background: #ffffff;
-    padding: 24px;
-    border-radius: 8px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    flex-direction: column;
-    flex-flow: column;
-    align-items: center;
-    justify-items: start;
-    transition: opacity 0.4s;
-  }
-  
-  .admin-view-menu-content ul li:hover {
-    opacity: 0.7;
-  }
-  
-  .admin-view-menu-content ul li strong {
-    font-size: 16px;
-    margin: 7px;
-  }
-  
-  .admin-view-menu-content ul li p {
-    font-size: 17px;
-  }
-  
+	align-items: center;
+	justify-items: center;
 
-  .admin-view-menu-content button {
-    width: 15vh;
-    height: 35px;
-   
-  
-    
-    border-radius: 8px;
-    border-color: #000;
-    
-    font-weight: 700;
-    font-size: 11px;
-    color: #000;
-  
-    text-align: left;
-    text-decoration: none;
-    background: #d0deeb;
-  
-    cursor: pointer;
-  
-    transition: filter 0.2s;
-  }
-  
-  .admin-view-menu-content ul li button:hover {
-    opacity: 0.8;
-  }
+	padding: 30px;
+
+	border-radius: 8px;
+
+	background: #f0ebec;
+}
+
+.admin-view-menu-content h2 {
+	border: 1px solid black;
+	font-weight: bold;
+	font-style: italic;
+	display: inline-flex;
+	padding: 15px;
+	width: 100%;
+	background: #aaaaaa;
+	justify-content: center;
+	justify-items: left;
+}
+.admin-view-menu-content h3 {
+	font-family: Montserrat;
+	font-style: italic;
+	font-size: 38px;
+	margin-bottom: 40px;
+	display: flex;
+	justify-content: left;
+}
+.admin-view-menu-content a {
+	text-decoration: none;
+	color: #000;
+	font-size: 24px;
+	font-weight: 500;
+	transition: opacity 0.2s;
+}
+
+.admin-view-menu-content a:hover {
+	opacity: 0.5;
+}
+
+.admin-view-menu-content svg {
+	margin-right: 10px;
+}
+
+.admin-view-menu-content ul {
+	margin-top: 25px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 25px;
+	list-style: none;
+	flex-direction: column;
+	flex-flow: column;
+	margin-bottom: 25px;
+	align-items: center;
+}
+
+.admin-view-menu-content ul li {
+	border: 3px solid black;
+	background: #ffffff;
+	padding: 24px;
+	border-radius: 8px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	flex-direction: column;
+	flex-flow: column;
+	align-items: center;
+	justify-items: start;
+	transition: opacity 0.4s;
+}
+
+.admin-view-menu-content ul li:hover {
+	opacity: 0.7;
+}
+
+.admin-view-menu-content ul li strong {
+	font-size: 16px;
+	margin: 7px;
+}
+
+.admin-view-menu-content ul li p {
+	font-size: 17px;
+}
+
+.admin-view-menu-content button {
+	width: 15vh;
+	height: 35px;
+
+	border-radius: 8px;
+	border-color: #000;
+
+	font-weight: 700;
+	font-size: 11px;
+	color: #000;
+
+	text-align: left;
+	text-decoration: none;
+	background: #d0deeb;
+
+	cursor: pointer;
+
+	transition: filter 0.2s;
+}
+
+.admin-view-menu-content ul li button:hover {
+	opacity: 0.8;
+}
