--- a/client/src/components/dashboard/customer/Contact/Contact.css
+++ b/client/src/components/dashboard/customer/Contact/Contact.css
@@ -1,121 +1,135 @@
-.body { font-family: 'Poppins', sans-serif; }
-.contact-page-section{
-position: relative;
-padding: 100px 0 50px;
+.body {
+	font-family: 'Poppins', sans-serif;
+}
+.contact-page-section {
+	position: relative;
+	padding: 100px 0 50px;
 }
 
-.contact-page-section .column{
-position: relative;
-margin-bottom: 50px;
+.contact-page-section .column {
+	position: relative;
+	margin-bottom: 50px;
 }
-.contact-page-section h2{
-font-size: 24px;
-align-content: center;
-margin-left: 28px;
-}  
-.contact-page-section .contact-form{
-padding-right: 0;
-margin: 0;
+.contact-page-section h2 {
+	font-size: 24px;
+	align-content: center;
+	margin-left: 28px;
 }
-.contact-page-section .contact-form .form-group input[type=submit],
-.contact-page-section .contact-form .form-group button{
-margin-top: 5px;
+.contact-page-section .contact-form {
+	padding-right: 0;
+	margin: 0;
 }
-.contact-page-section .text{
-position: relative;
-font-size: 14px;
-line-height: 28px;
-color: #242222;
-margin-bottom: 30px;
+.contact-page-section .contact-form .form-group input[type='submit'],
+.contact-page-section .contact-form .form-group button {
+	margin-top: 5px;
 }
-.ul.contact-info { list-style: none; margin: 0; padding: 0;}
-.contact-page-section .contact-info{
-position: relative;
-margin-bottom: 50px;
+.contact-page-section .text {
+	position: relative;
+	font-size: 14px;
+	line-height: 28px;
+	color: #242222;
+	margin-bottom: 30px;
 }
-.contact-page-section .contact-info li{
-position: relative;
-padding-left: 70px;
-font-size: 14px;
-line-height: 24px;
-color: #777777;
-font-weight: 400;
-margin-bottom: 45px;
+.ul.contact-info {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
-.contact-page-section .contact-info li .icon{
-    position: absolute;
-    left: 0;
-    top: 0;
-    font-size: 36px;
-    line-height: 1.4em;
-    color: #bbbbbb;
-  }
-.contact-page-section .contact-info li strong{
-display: block;
-font-size: 18px;
-line-height: 26px;
-color: #002121;
-font-weight: 700;
-margin-bottom: 5px;
+.contact-page-section .contact-info {
+	position: relative;
+	margin-bottom: 50px;
 }
-.contact-page-section .contact-info li a{
-color: #777777;
-display: inline-block;
--webkit-transition: all 300ms ease;
--moz-transition: all 300ms ease;
--ms-transition: all 300ms ease;
--o-transition: all 300ms ease;
-transition: all 300ms ease;
+.contact-page-section .contact-info li {
+	position: relative;
+	padding-left: 70px;
+	font-size: 14px;
+	line-height: 24px;
+	color: #777777;
+	font-weight: 400;
+	margin-bottom: 45px;
 }
-.contact-page-section .contact-info li a:hover{
-color: #1a1817;
+.contact-page-section .contact-info li .icon {
+	position: absolute;
+	left: 0;
+	top: 0;
+	font-size: 36px;
+	line-height: 1.4em;
+	color: #bbbbbb;
 }
-.social-icon-three{
-position: relative;
-display: block;
+.contact-page-section .contact-info li strong {
+	display: block;
+	font-size: 18px;
+	line-height: 26px;
+	color: #002121;
+	font-weight: 700;
+	margin-bottom: 5px;
 }
-.social-icon-three .title{
-position: relative;
-display: block;
-font-size: 18px;
-line-height: 26px;
-color: #002121;
-font-weight: 700;
-font-family: "Archivo", sans-serif;
-margin-bottom: 20px;
+.contact-page-section .contact-info li a {
+	color: #777777;
+	display: inline-block;
+	-webkit-transition: all 300ms ease;
+	-moz-transition: all 300ms ease;
+	-ms-transition: all 300ms ease;
+	-o-transition: all 300ms ease;
+	transition: all 300ms ease;
+}
+.contact-page-section .contact-info li a:hover {
+	color: #1a1817;
+}
+.social-icon-three {
+	position: relative;
+	display: block;
+}
+.social-icon-three .title {
+	position: relative;
+	display: block;
+	font-size: 18px;
+	line-height: 26px;
+	color: #002121;
+	font-weight: 700;
+	font-family: 'Archivo', sans-serif;
+	margin-bottom: 20px;
 }
 
-    .contact-form .form-group input[type="text"], .contact-form .form-group input[type="email"], .contact-form .form-group input[type="tel"], .contact-form .form-group input[type="url"], .contact-form .form-group textarea, .contact-form .form-group select {
-position: relative;
-display: block;
-width: 100%;
-font-size: 14px;
-line-height: 28px;
-color: #bbbbbb;
-font-weight: 400;
-height: 60px;
-padding: 15px 30px;
-background-color: transparent;
-border: 1px solid #dddddd;
-border-radius: 30px;
--webkit-transition: all 300ms ease;
--moz-transition: all 300ms ease;
--ms-transition: all 300ms ease;
--o-transition: all 300ms ease;
-transition: all 300ms ease;
+.contact-form .form-group input[type='text'],
+.contact-form .form-group input[type='email'],
+.contact-form .form-group input[type='tel'],
+.contact-form .form-group input[type='url'],
+.contact-form .form-group textarea,
+.contact-form .form-group select {
+	position: relative;
+	display: block;
+	width: 100%;
+	font-size: 14px;
+	line-height: 28px;
+	color: #bbbbbb;
+	font-weight: 400;
+	height: 60px;
+	padding: 15px 30px;
+	background-color: transparent;
+	border: 1px solid #dddddd;
+	border-radius: 30px;
+	-webkit-transition: all 300ms ease;
+	-moz-transition: all 300ms ease;
+	-ms-transition: all 300ms ease;
+	-o-transition: all 300ms ease;
+	transition: all 300ms ease;
 }
-    .contact-form .form-group textarea {
-height: 200px;
-border-radius: 15px;
-resize: none;
+.contact-form .form-group textarea {
+	height: 200px;
+	border-radius: 15px;
+	resize: none;
 }
-    .contact-form .form-group input:focus, .contact-form .form-group select:focus, .contact-form .form-group textarea:focus {
-border-color: #ff9f14; outline: none;
+.contact-form .form-group input:focus,
+.contact-form .form-group select:focus,
+.contact-form .form-group textarea:focus {
+	border-color: #ff9f14;
+	outline: none;
 }
-.footer{
-    background-color: #c3d5db;
-    margin:0px auto;
-    padding: 10px 0px 20px 0px;
-    color: #1a1817;
-    position:relative;
+.footer {
+	background-color: #c3d5db;
+	margin: 0px auto;
+	padding: 10px 0px 20px 0px;
+	color: #1a1817;
+	position: relative;
 }
