--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,28 +1,33 @@
 body {
-    margin: 0;
-    padding: 0;
-    color: #333;
-    font-size: 16px;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-family: "Open Sans", sans-serif;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "PT Serif", serif;
-  }
+	margin: 0;
+	padding: 0;
+	color: #333;
+	font-size: 16px;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	font-family: 'Open Sans', sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'PT Serif', serif;
+}
 
 select.form-control,
 textarea.form-control,
 input.form-control {
-  font-size: 1rem;
+	font-size: 1rem;
 }
-input[type=file] {
-  width: 100%;
+input[type='file'] {
+	width: 100%;
 }
 
 .footer {
-  flex-shrink: 0;
-  text-align: left;
-  background-color: #18505e;
-  color: white;
+	flex-shrink: 0;
+	text-align: left;
+	background-color: #18505e;
+	color: white;
 }
